# TravelSmart-App-Concept

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: example_usage.py
src/travelsmart/: __init__.py  cli.py  config.py  server.py
src/travelsmart/api/: enhanced_main.py  main.py  websocket.py
src/travelsmart/mcp_servers/: booking_server.py  travel_insights_server.py  weather_server.py
src/travelsmart/models/: __init__.py  mcp_models.py  travel_models.py
src/travelsmart/services/: __init__.py  gpt_service.py  mcp_client.py  notification_service.py  recommendation_engine.py  travel_orchestrator.py
src/travelsmart/utils/: __init__.py  cache.py  database.py  helpers.py  logger.py
tests/: test_enhanced_features.py  test_travel_orchestrator.py
