[tool.poetry]
name = "travelsmart"
version = "1.0.0"
description = "AI-powered travel booking with OpenAI GPT and MCP servers"
authors = ["TravelSmart Team <team@travelsmart.ai>"]
readme = "README.md"
packages = [{include = "travelsmart", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.35.0"
python-dotenv = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiohttp = "^3.9.0"
loguru = "^0.7.2"
httpx = "^0.25.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
click = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
travelsmart = "travelsmart.cli:main"
travelsmart-server = "travelsmart.server:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
